vanguard/aleo/parser/AleoParser.py
# Generated from ./AleoParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AleoParser ( Parser ):

    grammarFileName = "AleoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'/'", "'['", "']'", "';'", "'::'", 
                     "':'", "'-'", "'as'", "'into'", "'to'", "'public'", 
                     "'private'", "'constant'", "'future'", "'record'", 
                     "'group'", "'GEN'", "'self'", "'signer'", "'caller'", 
                     "'block'", "'height'", "'w'", "'x'", "'y'", "'contains'", 
                     "'get'", "'or_use'", "'set'", "'remove'", "'rand'", 
                     "'chacha'", "'position'", "'await'", "'ternary'", "'sign'", 
                     "'verify'", "'sign_verify'", "'call'", "'async'", "'abs'", 
                     "'double'", "'inv'", "'neg'", "'not'", "'square'", 
                     "'sqrt'", "'add'", "'sub'", "'mul'", "'div'", "'rem'", 
                     "'pow'", "'shl'", "'shr'", "'mod'", "'and'", "'or'", 
                     "'xor'", "'nand'", "'nor'", "'gt'", "'gte'", "'lt'", 
                     "'lte'", "'is'", "'eq'", "'neq'", "'assert'", "'commit'", 
                     "'hash'", "'hash_many'", "'bhp256'", "'bhp512'", "'bhp768'", 
                     "'bhp1024'", "'ped64'", "'ped128'", "'psd2'", "'psd4'", 
                     "'psd8'", "'keccak256'", "'keccak384'", "'keccak512'", 
                     "'sha3_256'", "'sha3_384'", "'sha3_512'", "'cast'", 
                     "'lossy'", "'branch'", "'program'", "'import'", "'mapping'", 
                     "'key'", "'value'", "'struct'", "'closure'", "'input'", 
                     "'output'", "'function'", "'finalize'", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "'field'", "'scalar'", "'address'", 
                     "'boolean'", "'signature'" ]

    symbolicNames = [ "<INVALID>", "DOT", "SLASH", "LB", "RB", "SC", "CC", 
                      "CL", "DS", "AS", "INTO", "TO", "PUBLIC", "PRIVATE", 
                      "CONSTANT", "FUTURE", "RECORD", "GROUP", "GEN", "SELF", 
                      "SIGNER", "CALLER", "BLOCK", "HEIGHT", "W", "X", "Y", 
                      "CONTAINS", "GET", "OR_USE", "SET", "REMOVE", "RAND", 
                      "CHACHA", "POSITION", "AWAIT", "TERNARY", "SIGN", 
                      "VERIFY", "SIGN_VERIFY", "CALL", "ASYNC", "ABS", "DOUBLE", 
                      "INV", "NEG", "NOT", "SQUARE", "SQRT", "ADD", "SUB", 
                      "MUL", "DIV", "REM", "POW", "SHL", "SHR", "MOD", "AND", 
                      "OR", "XOR", "NAND", "NOR", "GT", "GTE", "LT", "LTE", 
                      "IS", "EQ", "NEQ", "ASSERT", "COMMIT", "HASH", "HASH_MANY", 
                      "BHP256", "BHP512", "BHP768", "BHP1024", "PED64", 
                      "PED128", "PSD2", "PSD4", "PSD8", "KECCAK256", "KECCAK384", 
                      "KECCAK512", "SHA3_256", "SHA3_384", "SHA3_512", "CAST", 
                      "LOSSY", "BRANCH", "PROGRAM", "IMPORT", "MAPPING", 
                      "KEY", "VALUE", "STRUCT", "CLOSURE", "INPUT", "OUTPUT", 
                      "FUNCTION", "FINALIZE", "TRUE", "FALSE", "UNSIGNED_TYPE", 
                      "SIGNED_TYPE", "FIELD", "SCALAR", "ADDRESS", "BOOLEAN", 
                      "SIGNATURE", "ADDRESS_LITERAL", "SIGNATURE_LITERAL", 
                      "DIGITS", "REGISTER", "IDENTIFIER", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_start = 0
    RULE_program = 1
    RULE_ximport = 2
    RULE_mapping = 3
    RULE_mapping_key = 4
    RULE_mapping_value = 5
    RULE_struct = 6
    RULE_record = 7
    RULE_closure = 8
    RULE_closure_input = 9
    RULE_closure_output = 10
    RULE_function = 11
    RULE_function_input = 12
    RULE_function_output = 13
    RULE_finalize = 14
    RULE_finalize_input = 15
    RULE_command = 16
    RULE_contains = 17
    RULE_get = 18
    RULE_get_or_use = 19
    RULE_set = 20
    RULE_remove = 21
    RULE_random = 22
    RULE_position = 23
    RULE_branch = 24
    RULE_xawait = 25
    RULE_instruction = 26
    RULE_unary = 27
    RULE_binary = 28
    RULE_ternary = 29
    RULE_is = 30
    RULE_assert = 31
    RULE_commit = 32
    RULE_hash1 = 33
    RULE_hash2 = 34
    RULE_hash = 35
    RULE_sign_verify = 36
    RULE_cast = 37
    RULE_call = 38
    RULE_xasync = 39
    RULE_literal = 40
    RULE_signed_literal = 41
    RULE_unsigned_literal = 42
    RULE_integer_literal = 43
    RULE_field_literal = 44
    RULE_group_literal = 45
    RULE_scalar_literal = 46
    RULE_arithmetic_literal = 47
    RULE_address_literal = 48
    RULE_signature_literal = 49
    RULE_boolean_literal = 50
    RULE_unsigned_type = 51
    RULE_signed_type = 52
    RULE_integer_type = 53
    RULE_field_type = 54
    RULE_group_type = 55
    RULE_scalar_type = 56
    RULE_arithmetic_type = 57
    RULE_address_type = 58
    RULE_boolean_type = 59
    RULE_signature_type = 60
    RULE_literal_type = 61
    RULE_array_type = 62
    RULE_plaintext_type = 63
    RULE_value_type = 64
    RULE_mapping_type = 65
    RULE_finalize_type = 66
    RULE_entry_type = 67
    RULE_register_type = 68
    RULE_modifier = 69
    RULE_program_id = 70
    RULE_program_name = 71
    RULE_program_domain = 72
    RULE_register = 73
    RULE_register_access = 74
    RULE_register_accessor = 75
    RULE_access_by_field = 76
    RULE_access_by_index = 77
    RULE_operand = 78
    RULE_operand_preset = 79
    RULE_tuple = 80
    RULE_entry = 81
    RULE_locator = 82
    RULE_cast_destination = 83
    RULE_destination_group = 84
    RULE_unary_op = 85
    RULE_binary_op = 86
    RULE_is_op = 87
    RULE_assert_op = 88
    RULE_commit_op = 89
    RULE_hash1_op = 90
    RULE_hash2_op = 91
    RULE_cast_op = 92
    RULE_branch_op = 93
    RULE_random_op = 94
    RULE_get_or_use_op = 95
    RULE_sign_verify_op = 96
    RULE_label = 97
    RULE_identifier = 98

    ruleNames =  [ "start", "program", "ximport", "mapping", "mapping_key", 
                   "mapping_value", "struct", "record", "closure", "closure_input", 
                   "closure_output", "function", "function_input", "function_output", 
                   "finalize", "finalize_input", "command", "contains", 
                   "get", "get_or_use", "set", "remove", "random", "position", 
                   "branch", "xawait", "instruction", "unary", "binary", 
                   "ternary", "is", "assert", "commit", "hash1", "hash2", 
                   "hash", "sign_verify", "cast", "call", "xasync", "literal", 
                   "signed_literal", "unsigned_literal", "integer_literal", 
                   "field_literal", "group_literal", "scalar_literal", "arithmetic_literal", 
                   "address_literal", "signature_literal", "boolean_literal", 
                   "unsigned_type", "signed_type", "integer_type", "field_type", 
                   "group_type", "scalar_type", "arithmetic_type", "address_type", 
                   "boolean_type", "signature_type", "literal_type", "array_type", 
                   "plaintext_type", "value_type", "mapping_type", "finalize_type", 
                   "entry_type", "register_type", "modifier", "program_id", 
                   "program_name", "program_domain", "register", "register_access", 
                   "register_accessor", "access_by_field", "access_by_index", 
                   "operand", "operand_preset", "tuple", "entry", "locator", 
                   "cast_destination", "destination_group", "unary_op", 
                   "binary_op", "is_op", "assert_op", "commit_op", "hash1_op", 
                   "hash2_op", "cast_op", "branch_op", "random_op", "get_or_use_op", 
                   "sign_verify_op", "label", "identifier" ]

    EOF = Token.EOF
    DOT=1
    SLASH=2
    LB=3
    RB=4
    SC=5
    CC=6
    CL=7
    DS=8
    AS=9
    INTO=10
    TO=11
    PUBLIC=12
    PRIVATE=13
    CONSTANT=14
    FUTURE=15
    RECORD=16
    GROUP=17
    GEN=18
    SELF=19
    SIGNER=20
    CALLER=21
    BLOCK=22
    HEIGHT=23
    W=24
    X=25
    Y=26
    CONTAINS=27
    GET=28
    OR_USE=29
    SET=30
    REMOVE=31
    RAND=32
    CHACHA=33
    POSITION=34
    AWAIT=35
    TERNARY=36
    SIGN=37
    VERIFY=38
    SIGN_VERIFY=39
    CALL=40
    ASYNC=41
    ABS=42
    DOUBLE=43
    INV=44
    NEG=45
    NOT=46
    SQUARE=47
    SQRT=48
    ADD=49
    SUB=50
    MUL=51
    DIV=52
    REM=53
    POW=54
    SHL=55
    SHR=56
    MOD=57
    AND=58
    OR=59
    XOR=60
    NAND=61
    NOR=62
    GT=63
    GTE=64
    LT=65
    LTE=66
    IS=67
    EQ=68
    NEQ=69
    ASSERT=70
    COMMIT=71
    HASH=72
    HASH_MANY=73
    BHP256=74
    BHP512=75
    BHP768=76
    BHP1024=77
    PED64=78
    PED128=79
    PSD2=80
    PSD4=81
    PSD8=82
    KECCAK256=83
    KECCAK384=84
    KECCAK512=85
    SHA3_256=86
    SHA3_384=87
    SHA3_512=88
    CAST=89
    LOSSY=90
    BRANCH=91
    PROGRAM=92
    IMPORT=93
    MAPPING=94
    KEY=95
    VALUE=96
    STRUCT=97
    CLOSURE=98
    INPUT=99
    OUTPUT=100
    FUNCTION=101
    FINALIZE=102
    TRUE=103
    FALSE=104
    UNSIGNED_TYPE=105
    SIGNED_TYPE=106
    FIELD=107
    SCALAR=108
    ADDRESS=109
    BOOLEAN=110
    SIGNATURE=111
    ADDRESS_LITERAL=112
    SIGNATURE_LITERAL=113
    DIGITS=114
    REGISTER=115
    IDENTIFIER=116
    WS=117
    COMMENT=118
    LINE_COMMENT=119

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(AleoParser.ProgramContext,0)


        def getRuleIndex(self):
            return AleoParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = AleoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(AleoParser.PROGRAM, 0)

        def program_id(self):
            return self.getTypedRuleContext(AleoParser.Program_idContext,0)


        def SC(self):
            return self.getToken(AleoParser.SC, 0)

        def ximport(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.XimportContext)
            else:
                return self.getTypedRuleContext(AleoParser.XimportContext,i)


        def mapping(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.MappingContext)
            else:
                return self.getTypedRuleContext(AleoParser.MappingContext,i)


        def struct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.StructContext)
            else:
                return self.getTypedRuleContext(AleoParser.StructContext,i)


        def record(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.RecordContext)
            else:
                return self.getTypedRuleContext(AleoParser.RecordContext,i)


        def closure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.ClosureContext)
            else:
                return self.getTypedRuleContext(AleoParser.ClosureContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.FunctionContext)
            else:
                return self.getTypedRuleContext(AleoParser.FunctionContext,i)


        def getRuleIndex(self):
            return AleoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = AleoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==93:
                self.state = 200
                self.ximport()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 206
            self.match(AleoParser.PROGRAM)
            self.state = 207
            self.program_id()
            self.state = 208
            self.match(AleoParser.SC)
            self.state = 214 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 214
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [94]:
                    self.state = 209
                    self.mapping()
                    pass
                elif token in [97]:
                    self.state = 210
                    self.struct()
                    pass
                elif token in [16]:
                    self.state = 211
                    self.record()
                    pass
                elif token in [98]:
                    self.state = 212
                    self.closure()
                    pass
                elif token in [101]:
                    self.state = 213
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 216 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16 or ((((_la - 94)) & ~0x3f) == 0 and ((1 << (_la - 94)) & 153) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class XimportContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(AleoParser.IMPORT, 0)

        def program_id(self):
            return self.getTypedRuleContext(AleoParser.Program_idContext,0)


        def SC(self):
            return self.getToken(AleoParser.SC, 0)

        def getRuleIndex(self):
            return AleoParser.RULE_ximport

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXimport" ):
                listener.enterXimport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXimport" ):
                listener.exitXimport(self)




    def ximport(self):

        localctx = AleoParser.XimportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ximport)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            self.match(AleoParser.IMPORT)
            self.state = 219
            self.program_id()
            self.state = 220
            self.match(AleoParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MappingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAPPING(self):
            return self.getToken(AleoParser.MAPPING, 0)

        def identifier(self):
            return self.getTypedRuleContext(AleoParser.IdentifierContext,0)


        def CL(self):
            return self.getToken(AleoParser.CL, 0)

        def mapping_key(self):
            return self.getTypedRuleContext(AleoParser.Mapping_keyContext,0)


        def mapping_value(self):
            return self.getTypedRuleContext(AleoParser.Mapping_valueContext,0)


        def getRuleIndex(self):
            return AleoParser.RULE_mapping

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapping" ):
                listener.enterMapping(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapping" ):
                listener.exitMapping(self)




    def mapping(self):

        localctx = AleoParser.MappingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mapping)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.match(AleoParser.MAPPING)
            self.state = 223
            self.identifier()
            self.state = 224
            self.match(AleoParser.CL)
            self.state = 225
            self.mapping_key()
            self.state = 226
            self.mapping_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mapping_keyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(AleoParser.KEY, 0)

        def AS(self):
            return self.getToken(AleoParser.AS, 0)

        def mapping_type(self):
            return self.getTypedRuleContext(AleoParser.Mapping_typeContext,0)


        def SC(self):
            return self.getToken(AleoParser.SC, 0)

        def getRuleIndex(self):
            return AleoParser.RULE_mapping_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapping_key" ):
                listener.enterMapping_key(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapping_key" ):
                listener.exitMapping_key(self)




    def mapping_key(self):

        localctx = AleoParser.Mapping_keyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mapping_key)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self.match(AleoParser.KEY)
            self.state = 229
            self.match(AleoParser.AS)
            self.state = 230
            self.mapping_type()
            self.state = 231
            self.match(AleoParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mapping_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALUE(self):
            return self.getToken(AleoParser.VALUE, 0)

        def AS(self):
            return self.getToken(AleoParser.AS, 0)

        def mapping_type(self):
            return self.getTypedRuleContext(AleoParser.Mapping_typeContext,0)


        def SC(self):
            return self.getToken(AleoParser.SC, 0)

        def getRuleIndex(self):
            return AleoParser.RULE_mapping_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapping_value" ):
                listener.enterMapping_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapping_value" ):
                listener.exitMapping_value(self)




    def mapping_value(self):

        localctx = AleoParser.Mapping_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mapping_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 233
            self.match(AleoParser.VALUE)
            self.state = 234
            self.match(AleoParser.AS)
            self.state = 235
            self.mapping_type()
            self.state = 236
            self.match(AleoParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(AleoParser.STRUCT, 0)

        def identifier(self):
            return self.getTypedRuleContext(AleoParser.IdentifierContext,0)


        def CL(self):
            return self.getToken(AleoParser.CL, 0)

        def tuple_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.TupleContext)
            else:
                return self.getTypedRuleContext(AleoParser.TupleContext,i)


        def getRuleIndex(self):
            return AleoParser.RULE_struct

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct" ):
                listener.enterStruct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct" ):
                listener.exitStruct(self)




    def struct(self):

        localctx = AleoParser.StructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_struct)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 238
            self.match(AleoParser.STRUCT)
            self.state = 239
            self.identifier()
            self.state = 240
            self.match(AleoParser.CL)
            self.state = 242 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 241
                    self.tuple_()

                else:
                    raise NoViableAltException(self)
                self.state = 244 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECORD(self):
            return self.getToken(AleoParser.RECORD, 0)

        def identifier(self):
            return self.getTypedRuleContext(AleoParser.IdentifierContext,0)


        def CL(self):
            return self.getToken(AleoParser.CL, 0)

        def entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.EntryContext)
            else:
                return self.getTypedRuleContext(AleoParser.EntryContext,i)


        def getRuleIndex(self):
            return AleoParser.RULE_record

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecord" ):
                listener.enterRecord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecord" ):
                listener.exitRecord(self)




    def record(self):

        localctx = AleoParser.RecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_record)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 246
            self.match(AleoParser.RECORD)
            self.state = 247
            self.identifier()
            self.state = 248
            self.match(AleoParser.CL)
            self.state = 252
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 249
                    self.entry() 
                self.state = 254
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClosureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLOSURE(self):
            return self.getToken(AleoParser.CLOSURE, 0)

        def identifier(self):
            return self.getTypedRuleContext(AleoParser.IdentifierContext,0)


        def CL(self):
            return self.getToken(AleoParser.CL, 0)

        def closure_input(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AleoParser.Closure_inputContext)
            else:
                return self.getTypedRuleContext(AleoParser.Closure_inputContext,i)

